<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<SeekBarPreference
		android:defaultValue="0"
		android:max="1000"
		android:id="@+id/pref_start"
		android:key="pref_start"
		android:title="@string/settings_start_index"
		android:summary="@string/settings_start_index__s" />
	<SeekBarPreference
		android:defaultValue="10"
		android:max="1000"
		android:id="@+id/pref_end"
	    android:key="pref_end"
	    android:title="@string/settings_end_index"
	    android:summary="@string/settings_end_index__s" />
	<CheckBoxPreference
		android:defaultValue="false"
	    android:key="pref_show_resume_success"
	    android:title="@string/settings_resume_success"
	    android:summary="@string/settings_resume_success__s" />
	<CheckBoxPreference
		android:defaultValue="false"
	    android:key="pref_show_resume_failure"
	    android:title="@string/settings_resume_failure"
	    android:summary="@string/settings_resume_failure__s" />
</PreferenceScreen>